Add borders to footer description

--- a/index.html
+++ b/index.html
@@ -314,7 +314,7 @@
                     </div>
                 </div>
             </div>
-            <div class="d-md-flex flex-column col-md text-center">
+            <div class="d-md-flex flex-column col-md text-center border-start border-end border-1">
                 <div class="d-flex align-items-end justify-content-center">
                     <i class="bi bi-box-seam color-grey fs-1"></i>
                     <h2 class="color-grey fs-4 font-1">FICTIONAL</h2>
