Add hover to navbar links and form btn

--- a/index.html
+++ b/index.html
@@ -24,17 +24,14 @@
                 <h2 class="text-light font-1 mt-2">FICTIONAL</h2>
             </div>
             <div class="nav-2">
-                <div >
-                    <i class="bi bi-house-door-fill color-grey"></i>
-                    <a href="#" class="color-grey text-decoration-none">Home</a>
+                <div>
+                    <a href="#" class="color-grey text-decoration-none link-hover"><i class="bi bi-house-door-fill color-grey me-1"></i>Home</a>
                 </div>
                 <div>
-                    <i class="bi bi-grid-fill color-grey"></i>
-                    <a href="#" class="color-grey text-decoration-none">Collection</a>
+                    <a href="#" class="color-grey text-decoration-none link-hover"><i class="bi bi-grid-fill color-grey me-1"></i>Collection</a>
                 </div>
                 <div>
-                    <i class="bi bi-cart-fill color-grey"></i>
-                    <a href="#" class="color-grey text-decoration-none">Purchase List</a>
+                    <a href="#" class="color-grey text-decoration-none link-hover"><i class="bi bi-cart-fill color-grey me-1"></i>Purchase List</a>
                 </div>
             </div>
             <div class="nav-3 d-none d-md-flex">
@@ -55,7 +52,7 @@
                         <option value="acessories">Acessories</option>
                     </select>
                     <input class="form-control rounded-0" type="text" placeholder="What do you search for?" size="45">
-                    <input class="ms-3 bg-black text-light border-0 rounded-1 px-3" type="submit" value="SEARCH">
+                    <input class="ms-3 border-0 rounded-1 px-3 form-btn-hover" type="submit" value="SEARCH">
                 </form>
             </div>
         </div>
