Add transition to hovers on navbar and form

--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
                 </div>
             </div>
             <div class="nav-3 d-none d-md-flex">
-                <a href="#" class="color-grey text-decoration-none badge bg-red text-light rounded-1">POST AN AD</a>
+                <a href="#" class="color-grey text-decoration-none badge rounded-1 nav-btn-hover">POST AN AD</a>
             </div>
         </nav>
         <!-- Ipad/Desktop searchbar -->
