Add hovers on footer

--- a/index.html
+++ b/index.html
@@ -289,25 +289,25 @@
                 <h3 class="color-red footer-title">Categories</h3>
                 <div class="row">
                     <div class="d-flex flex-column col">
-                        <a class="color-grey text-decoration-none" href="#">Games</a>
-                        <a class="color-grey text-decoration-none" href="#">Consoles</a>
-                        <a class="color-grey text-decoration-none" href="#">Acessories</a>
-                        <a class="color-grey text-decoration-none" href="#">Games</a>
-                        <a class="color-grey text-decoration-none" href="#">Consoles</a>
+                        <a class="color-grey text-decoration-none link-hover" href="#">Games</a>
+                        <a class="color-grey text-decoration-none link-hover" href="#">Consoles</a>
+                        <a class="color-grey text-decoration-none link-hover" href="#">Acessories</a>
+                        <a class="color-grey text-decoration-none link-hover" href="#">Games</a>
+                        <a class="color-grey text-decoration-none link-hover" href="#">Consoles</a>
                     </div>
                     <div class="d-flex flex-column col">
-                        <a class="color-grey text-decoration-none" href="#">Games</a>
-                        <a class="color-grey text-decoration-none" href="#">Consoles</a>
-                        <a class="color-grey text-decoration-none" href="#">Acessories</a>
-                        <a class="color-grey text-decoration-none" href="#">Games</a>
+                        <a class="color-grey text-decoration-none link-hover" href="#">Games</a>
+                        <a class="color-grey text-decoration-none link-hover" href="#">Consoles</a>
+                        <a class="color-grey text-decoration-none link-hover" href="#">Acessories</a>
+                        <a class="color-grey text-decoration-none link-hover" href="#">Games</a>
                     </div>
                     <div class="d-flex flex-column col">
-                        <a class="color-grey text-decoration-none" href="#">Games</a>
-                        <a class="color-grey text-decoration-none" href="#">Consoles</a>
-                        <a class="color-grey text-decoration-none" href="#">Acessories</a>
-                        <a class="color-grey text-decoration-none" href="#">Games</a>
-                        <a class="color-grey text-decoration-none" href="#">Consoles</a>
-                        <a class="color-grey text-decoration-none" href="#">Acessories</a>
+                        <a class="color-grey text-decoration-none link-hover" href="#">Games</a>
+                        <a class="color-grey text-decoration-none link-hover" href="#">Consoles</a>
+                        <a class="color-grey text-decoration-none link-hover" href="#">Acessories</a>
+                        <a class="color-grey text-decoration-none link-hover" href="#">Games</a>
+                        <a class="color-grey text-decoration-none link-hover" href="#">Consoles</a>
+                        <a class="color-grey text-decoration-none link-hover" href="#">Acessories</a>
                     </div>
                 </div>
             </div>
@@ -324,12 +324,12 @@
                 <h3 class="color-red footer-title">Navigation</h3>
                 <div class="row">
                     <div class="d-flex flex-column col">
-                        <a class="color-grey text-decoration-none" href="#">Home</a>
-                        <a class="color-grey text-decoration-none" href="#">Sign in</a>
-                        <a class="color-grey text-decoration-none" href="#">Sign Up</a>
-                        <a class="color-grey text-decoration-none" href="#">Terms & Conditions</a>
-                        <a class="color-grey text-decoration-none" href="#">FAQ</a>
-                        <a class="color-grey text-decoration-none" href="#">Help</a>
+                        <a class="color-grey text-decoration-none link-hover" href="#">Home</a>
+                        <a class="color-grey text-decoration-none link-hover" href="#">Sign in</a>
+                        <a class="color-grey text-decoration-none link-hover" href="#">Sign Up</a>
+                        <a class="color-grey text-decoration-none link-hover" href="#">Terms & Conditions</a>
+                        <a class="color-grey text-decoration-none link-hover" href="#">FAQ</a>
+                        <a class="color-grey text-decoration-none link-hover" href="#">Help</a>
                     </div>
                 </div>
             </div>
@@ -343,15 +343,15 @@
                     All Rights Reserved.
                 </p>
                 <p class="color-grey text-center">
-                    Designed by João Vítor Montanholi
+                    Designed by <a class="text-decoration-none link-hover color-black" href="https://github.com/jmontanholi">João Vítor Montanholi</a> 
                 </p>
             </div>
-            <div class="d-none d-md-flex color-grey fs-4">
-                <i class="bi bi-facebook m-1"></i>
-                <i class="bi bi-twitter m-1"></i>
-                <i class="bi bi-twitch m-1"></i>
-                <i class="bi bi-camera-fill m-1"></i>
-                <i class="bi bi-linkedin m-1 me-3"></i>
+            <div class="d-none d-md-flex fs-4">
+                <a class="color-grey" href="#"><i class="bi bi-facebook m-1 link-hover"></i></a>
+                <a class="color-grey" href="#"><i class="bi bi-twitter m-1 link-hover"></i></a>
+                <a class="color-grey" href="#"><i class="bi bi-twitch m-1 link-hover"></i></a>
+                <a class="color-grey" href="#"><i class="bi bi-camera-fill m-1 link-hover"></i></a>
+                <a class="color-grey" href="#"><i class="bi bi-linkedin m-1 me-3 link-hover"></i></a>
             </div>
         </div>
     </footer>
