--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
         <nav class="nav">
             <div class="nav-1">
                 <i class="bi bi-box-seam color-red me-1"></i>
-                <h2 class="text-light font-1 mt-2">FICTIONAL</h2>
+                <h1 class="text-light font-1 mt-2">FICTIONAL</h1>
             </div>
             <div class="nav-2">
                 <div>
@@ -74,7 +74,7 @@
                         <p class="ad-p-1 lh-1 color-black font-2 my-1">Among Us</p>
                         <p class="color-grey ad-p-2 lh-1 font-2">From: <span class="color-black">Steam</span></p>
                         <div class="d-flex justify-content-between align-items-end">
-                            <i class="bi bi-plus-square color-grey fs-4"></i>
+                            <i class="bi bi-plus-square color-grey fs-4 plus-hover"></i>
                             <p class="fs-4 m-0 color-red">20$</p>
                         </div>
                     </div>
@@ -83,7 +83,7 @@
                         <p class="ad-p-1 lh-1 color-black font-2 my-1">Bloons TD 6</p>
                         <p class="color-grey ad-p-2 lh-1 font-2">From: <span class="color-black">Steam</span></p>
                         <div class="d-flex justify-content-between align-items-center">
-                            <i class="bi bi-plus-square color-grey fs-4"></i>
+                            <i class="bi bi-plus-square color-grey fs-4 plus-hover"></i>
                             <p class="fs-4 m-0 color-red">20$</p>
                         </div>
                     </div>
@@ -92,7 +92,7 @@
                         <p class="ad-p-1 lh-1 color-black font-2 my-1">Dying Light</p>
                         <p class="color-grey ad-p-2 lh-1 font-2">From: <span class="color-black">Steam</span></p>
                         <div class="d-flex justify-content-between align-items-center">
-                            <i class="bi bi-plus-square color-grey fs-4"></i>
+                            <i class="bi bi-plus-square color-grey fs-4 plus-hover"></i>
                             <p class="fs-4 m-0 color-red">27$</p>
                         </div>
                     </div>
@@ -101,7 +101,7 @@
                         <p class="ad-p-1 lh-1 color-black font-2 my-1">Flight Simulator</p>
                         <p class="color-grey ad-p-2 lh-1 font-2">From: <span class="color-black">Steam</span></p>
                         <div class="d-flex justify-content-between align-items-center">
-                            <i class="bi bi-plus-square color-grey fs-4"></i>
+                            <i class="bi bi-plus-square color-grey fs-4 plus-hover"></i>
                             <p class="fs-4 m-0 color-red">89$</p>
                         </div>
                     </div>
@@ -110,7 +110,7 @@
                         <p class="ad-p-1 lh-1 color-black font-2 my-1">Grand Theft Auto V</p>
                         <p class="color-grey ad-p-2 lh-1 font-2">From: <span class="color-black">Steam</span></p>
                         <div class="d-flex justify-content-between align-items-center">
-                            <i class="bi bi-plus-square color-grey fs-4"></i>
+                            <i class="bi bi-plus-square color-grey fs-4 plus-hover"></i>
                             <p class="fs-4 m-0 color-red">60$</p>
                         </div>
                     </div>
@@ -119,7 +119,7 @@
                         <p class="ad-p-1 lh-1 color-black font-2 my-1">Hades</p>
                         <p class="color-grey ad-p-2 lh-1 font-2">From: <span class="color-black">Steam</span></p>
                         <div class="d-flex justify-content-between align-items-center">
-                            <i class="bi bi-plus-square color-grey fs-4"></i>
+                            <i class="bi bi-plus-square color-grey fs-4 plus-hover"></i>
                             <p class="fs-4 m-0 color-red">15$</p>
                         </div>
                     </div>
@@ -128,7 +128,7 @@
                         <p class="ad-p-1 lh-1 color-black font-2 my-1">Loop Hero</p>
                         <p class="color-grey ad-p-2 lh-1 font-2">From: <span class="color-black">Steam</span></p>
                         <div class="d-flex justify-content-between align-items-center">
-                            <i class="bi bi-plus-square color-grey fs-4"></i>
+                            <i class="bi bi-plus-square color-grey fs-4 plus-hover"></i>
                             <p class="fs-4 m-0 color-red">15$</p>
                         </div>
                     </div>
@@ -137,7 +137,7 @@
                         <p class="ad-p-1 lh-1 color-black font-2 my-1">Monster Hunter World</p>
                         <p class="color-grey ad-p-2 lh-1 font-2">From: <span class="color-black">Steam</span></p>
                         <div class="d-flex justify-content-between align-items-center">
-                            <i class="bi bi-plus-square color-grey fs-4"></i>
+                            <i class="bi bi-plus-square color-grey fs-4 plus-hover"></i>
                             <p class="fs-4 m-0 color-red">40$</p>
                         </div>
                     </div>
@@ -146,7 +146,7 @@
                         <p class="ad-p-1 lh-1 color-black font-2 my-1">Stardew Valley</p>
                         <p class="color-grey ad-p-2 lh-1 font-2">From: <span class="color-black">Steam</span></p>
                         <div class="d-flex justify-content-between align-items-center">
-                            <i class="bi bi-plus-square color-grey fs-4"></i>
+                            <i class="bi bi-plus-square color-grey fs-4 plus-hover"></i>
                             <p class="fs-4 m-0 color-red">15$</p>
                         </div>
                     </div>
@@ -155,7 +155,7 @@
                         <p class="ad-p-1 lh-1 color-black font-2 my-1">Terraria</p>
                         <p class="color-grey ad-p-2 lh-1 font-2">From: <span class="color-black">Steam</span></p>
                         <div class="d-flex justify-content-between align-items-end">
-                            <i class="bi bi-plus-square color-grey fs-4"></i>
+                            <i class="bi bi-plus-square color-grey fs-4 plus-hover"></i>
                             <p class="fs-4 m-0 color-red">10$</p>
                         </div>
                     </div>
@@ -178,7 +178,7 @@
                         <p class="ad-p-1 lh-1 color-black font-2 my-1">PlayStation 4 Console - 1TB Slim Edition</p>
                         <p class="color-grey ad-p-2 lh-1 font-2">From: <span class="color-black">Amazon</span></p>
                         <div class="d-flex justify-content-between align-items-end">
-                            <i class="bi bi-plus-square color-grey fs-4"></i>
+                            <i class="bi bi-plus-square color-grey fs-4 plus-hover"></i>
                             <p class="fs-4 m-0 color-red">368$</p>
                         </div>
                     </div>
@@ -187,7 +187,7 @@
                         <p class="ad-p-1 lh-1 color-black font-2 my-1">PlayStation 5 Console</p>
                         <p class="color-grey ad-p-2 lh-1 font-2">From: <span class="color-black">Amazon</span></p>
                         <div class="d-flex justify-content-between align-items-end">
-                            <i class="bi bi-plus-square color-grey fs-4"></i>
+                            <i class="bi bi-plus-square color-grey fs-4 plus-hover"></i>
                             <p class="fs-4 m-0 color-red">1500$</p>
                         </div>
                     </div>
@@ -196,7 +196,7 @@
                         <p class="ad-p-1 lh-1 color-black font-2 my-1">Xbox One S 1TB Console</p>
                         <p class="color-grey ad-p-2 lh-1 font-2">From: <span class="color-black">Amazon</span></p>
                         <div class="d-flex justify-content-between align-items-end">
-                            <i class="bi bi-plus-square color-grey fs-4"></i>
+                            <i class="bi bi-plus-square color-grey fs-4 plus-hover"></i>
                             <p class="fs-4 m-0 color-red">370$</p>
                         </div>
                     </div>
@@ -205,7 +205,7 @@
                         <p class="ad-p-1 lh-1 color-black font-2 my-1">Xbox Series S - 512GB SSD</p>
                         <p class="color-grey ad-p-2 lh-1 font-2">From: <span class="color-black">Amazon</span></p>
                         <div class="d-flex justify-content-between align-items-end">
-                            <i class="bi bi-plus-square color-grey fs-4"></i>
+                            <i class="bi bi-plus-square color-grey fs-4 plus-hover"></i>
                             <p class="fs-4 m-0 color-red">499$</p>
                         </div>
                     </div>
@@ -228,7 +228,7 @@
                         <p class="ad-p-1 lh-1 color-black font-2 my-1">Redragon M711 Cobra RGB Wired Gaming Mouse</p>
                         <p class="color-grey ad-p-2 lh-1 font-2">From: <span class="color-black">Amazon</span></p>
                         <div class="d-flex justify-content-between align-items-end">
-                            <i class="bi bi-plus-square color-grey fs-4"></i>
+                            <i class="bi bi-plus-square color-grey fs-4 plus-hover"></i>
                             <p class="fs-4 m-0 color-red">19$</p>
                         </div>
                     </div>
@@ -237,7 +237,7 @@
                         <p class="ad-p-1 lh-1 color-black font-2 my-1">Razer DeathAdder Elite Gaming Mouse</p>
                         <p class="color-grey ad-p-2 lh-1 font-2">From: <span class="color-black">Amazon</span></p>
                         <div class="d-flex justify-content-between align-items-end">
-                            <i class="bi bi-plus-square color-grey fs-4"></i>
+                            <i class="bi bi-plus-square color-grey fs-4 plus-hover"></i>
                             <p class="fs-4 m-0 color-red">63$</p>
                         </div>
                     </div>
@@ -246,7 +246,7 @@
                         <p class="ad-p-1 lh-1 color-black font-2 my-1">HyperX Cloud II - Gaming Headset</p>
                         <p class="color-grey ad-p-2 lh-1 font-2">From: <span class="color-black">Amazon</span></p>
                         <div class="d-flex justify-content-between align-items-end">
-                            <i class="bi bi-plus-square color-grey fs-4"></i>
+                            <i class="bi bi-plus-square color-grey fs-4 plus-hover"></i>
                             <p class="fs-4 m-0 color-red">99$</p>
                         </div>
                     </div>
@@ -255,7 +255,7 @@
                         <p class="ad-p-1 lh-1 color-black font-2 my-1">Turtle Beach Stealth 600 Gen 2 Wireless Gaming Headset for PlayStation 5</p>
                         <p class="color-grey ad-p-2 lh-1 font-2">From: <span class="color-black">Amazon</span></p>
                         <div class="d-flex justify-content-between align-items-end">
-                            <i class="bi bi-plus-square color-grey fs-4"></i>
+                            <i class="bi bi-plus-square color-grey fs-4 plus-hover"></i>
                             <p class="fs-4 m-0 color-red">499$</p>
                         </div>
                     </div>
@@ -264,7 +264,7 @@
                         <p class="ad-p-1 lh-1 color-black font-2 my-1">Corsair K55 RGB Gaming Keyboard</p>
                         <p class="color-grey ad-p-2 lh-1 font-2">From: <span class="color-black">Amazon</span></p>
                         <div class="d-flex justify-content-between align-items-end">
-                            <i class="bi bi-plus-square color-grey fs-4"></i>
+                            <i class="bi bi-plus-square color-grey fs-4 plus-hover"></i>
                             <p class="fs-4 m-0 color-red">499$</p>
                         </div>
                     </div>
@@ -273,7 +273,7 @@
                         <p class="ad-p-1 lh-1 color-black font-2 my-1">Logitech G613 LIGHTSPEED Wireless Mechanical Gaming Keyboard</p>
                         <p class="color-grey ad-p-2 lh-1 font-2">From: <span class="color-black">Amazon</span></p>
                         <div class="d-flex justify-content-between align-items-end">
-                            <i class="bi bi-plus-square color-grey fs-4"></i>
+                            <i class="bi bi-plus-square color-grey fs-4 plus-hover"></i>
                             <p class="fs-4 m-0 color-red">499$</p>
                         </div>
                     </div>
