Add arrow hovers

--- a/index.html
+++ b/index.html
@@ -67,7 +67,7 @@
                 <p class="m-0 ad-sub">(All genre. Platform: Computer)</p>
             </div>
             <div class="d-md-flex">
-                <i class="bi bi-caret-left d-none d-md-grid fs-1 align-self-center"></i>
+                <i class="bi bi-caret-left d-none d-md-grid fs-1 align-self-center arrow-hover"></i>
                 <div class="bg-light-grey row g-3 mx-3">
                     <div class="bg-light col-6 col-md-4 col-lg-3 border border-1 d-flex flex-column justify-content-between">
                         <img class="img-fluid mt-3" src="Assets/imgs/amongus.jpg" alt="">
@@ -160,7 +160,7 @@
                         </div>
                     </div>
                 </div>
-                <i class="bi bi-caret-right d-none d-md-grid fs-1 align-self-center"></i>
+                <i class="bi bi-caret-right d-none d-md-grid fs-1 align-self-center arrow-hover"></i>
             </div>
         </div>
         <!-- Second Ad List -->
@@ -171,7 +171,7 @@
                 <p class="m-0 ad-sub">(Sony & Microsoft)</p>
             </div>
             <div class="d-md-flex">
-                <i class="bi bi-caret-left d-none d-md-grid fs-1 align-self-center"></i>
+                <i class="bi bi-caret-left d-none d-md-grid fs-1 align-self-center arrow-hover"></i>
                 <div class="mt-2 bg-light-grey row g-3 mx-3">
                     <div class="bg-light col-6 col-md-4 col-lg-3 border border-1 d-flex flex-column justify-content-between">
                         <img class="img-fluid mt-3" src="Assets/imgs/ps4.jpg" alt="">
@@ -210,7 +210,7 @@
                         </div>
                     </div>
                 </div>
-                <i class="bi bi-caret-right d-none d-md-grid fs-1 align-self-center"></i>
+                <i class="bi bi-caret-right d-none d-md-grid fs-1 align-self-center arrow-hover"></i>
             </div>
         </div>
         <!-- Third Ads List -->
@@ -221,7 +221,7 @@
                 <p class="m-0 ad-sub">(Headsets, Controls, Keyboards, etc.)</p>
             </div>
             <div class="d-md-flex">
-                <i class="bi bi-caret-left d-none d-md-grid fs-1 align-self-center"></i>
+                <i class="bi bi-caret-left d-none d-md-grid fs-1 align-self-center arrow-hover"></i>
                 <div class="mt-2 bg-light-grey row g-3 mx-3">
                     <div class="bg-light col-6 col-md-4 col-lg-3 border border-1 d-flex flex-column justify-content-between">
                         <img class="img-fluid mt-3" src="Assets/imgs/mouse1.jpg" alt="">
@@ -278,7 +278,7 @@
                         </div>
                     </div>
                 </div>
-                <i class="bi bi-caret-right d-none d-md-grid fs-1 align-self-center"></i>
+                <i class="bi bi-caret-right d-none d-md-grid fs-1 align-self-center arrow-hover"></i>
             </div>
         </div>
     </main>
