Change search button to a tag

--- a/index.html
+++ b/index.html
@@ -52,7 +52,7 @@
                         <option value="acessories">Acessories</option>
                     </select>
                     <input class="form-control rounded-0" type="text" placeholder="What do you search for?" size="45">
-                    <input class="ms-3 border-0 rounded-1 px-3 form-btn-hover" type="submit" value="SEARCH">
+                    <a href="#" class="ms-3 border-0 rounded-1 px-3 form-btn-hover text-decoration-none d-flex align-items-center">SEARCH</a>
                 </form>
             </div>
         </div>
