--- a/search.html
+++ b/search.html
@@ -40,7 +40,7 @@
         </nav>
         <!-- Ipad/Desktop searchbar -->
         <div class="bg-red d-none d-md-flex flex-column align-items-center">
-            <div class="text-center pt-5">
+            <div class="text-start align-self-start pt-5 search-div">
                 <h1 class="text-light fw-bold">FICTIONAL</h1>
                 <p class="text-light">Buying And Selling Couldn't Be Simpler Than This</p>
             </div>
@@ -58,7 +58,9 @@
         </div>
     </header>
     <main class="bg-light-grey">
-        
+        <div class="row">
+            
+        </div>
     </main>
     <!-- Footer -->
     <footer class="bg-light">
@@ -73,45 +75,37 @@
                         <a class="color-grey text-decoration-none link-hover" href="#">Games</a>
                         <a class="color-grey text-decoration-none link-hover" href="#">Consoles</a>
                     </div>
-                    <div class="d-flex flex-column col">
-                        <a class="color-grey text-decoration-none link-hover" href="#">Games</a>
-                        <a class="color-grey text-decoration-none link-hover" href="#">Consoles</a>
-                        <a class="color-grey text-decoration-none link-hover" href="#">Acessories</a>
-                        <a class="color-grey text-decoration-none link-hover" href="#">Games</a>
-                    </div>
-                    <div class="d-flex flex-column col">
-                        <a class="color-grey text-decoration-none link-hover" href="#">Games</a>
-                        <a class="color-grey text-decoration-none link-hover" href="#">Consoles</a>
-                        <a class="color-grey text-decoration-none link-hover" href="#">Acessories</a>
-                        <a class="color-grey text-decoration-none link-hover" href="#">Games</a>
-                        <a class="color-grey text-decoration-none link-hover" href="#">Consoles</a>
-                        <a class="color-grey text-decoration-none link-hover" href="#">Acessories</a>
-                    </div>
                 </div>
             </div>
-            <div class="d-md-flex flex-column col-md text-center border-start border-end border-1">
-                <div class="d-flex align-items-end justify-content-center">
-                    <i class="bi bi-box-seam color-grey fs-1"></i>
-                    <h2 class="color-grey fs-4 font-1">FICTIONAL</h2>
-                </div>
-                <div>
-                    <p class="d-none d-md-grid">Lorem ipsum dolor sit, amet consectetur adipisicing elit. Fugiat expedita rem provident at, minima ducimus numquam nulla doloribus incidunt perspiciatis maiores tempore accusamus ipsum omnis dolore. Reiciendis, ipsa dolorum consequatur dolore voluptatem similique laudantium ad!</p>
-                </div>
-            </div>
-            <div class="d-none d-lg-grid col-md">
-                <h3 class="color-red footer-title">Navigation</h3>
+            <div class="d-none d-md-grid col-md ms-2">
+                <h3 class="color-red footer-title">Categories</h3>
                 <div class="row">
                     <div class="d-flex flex-column col">
-                        <a class="color-grey text-decoration-none link-hover" href="#">Home</a>
-                        <a class="color-grey text-decoration-none link-hover" href="#">Sign in</a>
-                        <a class="color-grey text-decoration-none link-hover" href="#">Sign Up</a>
-                        <a class="color-grey text-decoration-none link-hover" href="#">Terms & Conditions</a>
-                        <a class="color-grey text-decoration-none link-hover" href="#">FAQ</a>
-                        <a class="color-grey text-decoration-none link-hover" href="#">Help</a>
+                        <a class="color-grey text-decoration-none link-hover" href="#">Games</a>
+                        <a class="color-grey text-decoration-none link-hover" href="#">Consoles</a>
+                        <a class="color-grey text-decoration-none link-hover" href="#">Acessories</a>
+                        <a class="color-grey text-decoration-none link-hover" href="#">Games</a>
+                        <a class="color-grey text-decoration-none link-hover" href="#">Consoles</a>
+                    </div>
+                </div>
+            </div>
+            <div class="d-none d-md-grid col-md ms-2">
+                <h3 class="color-red footer-title">Categories</h3>
+                <div class="row">
+                    <div class="d-flex flex-column col">
+                        <a class="color-grey text-decoration-none link-hover" href="#">Games</a>
+                        <a class="color-grey text-decoration-none link-hover" href="#">Consoles</a>
+                        <a class="color-grey text-decoration-none link-hover" href="#">Acessories</a>
+                        <a class="color-grey text-decoration-none link-hover" href="#">Games</a>
+                        <a class="color-grey text-decoration-none link-hover" href="#">Consoles</a>
                     </div>
                 </div>
             </div>
         </nav>
+        <div class="d-flex align-items-end justify-content-center">
+            <i class="bi bi-box-seam color-grey fs-1"></i>
+            <h2 class="color-grey fs-4 font-1">FICTIONAL</h2>
+        </div>
         <div class="d-flex footer-2">
             <div class="d-md-flex mt-2 ms-2">
                 <p class="color-grey text-center">
