Finish checkboxes for mobile

--- a/search.html
+++ b/search.html
@@ -59,7 +59,63 @@
     </header>
     <main class="bg-light-grey">
         <div class="row">
-            
+            <div class="col-12 ">
+                <div class="d-flex justify-content-center mt-2">
+                    <input class="form-check-input" type="checkbox" name="Rent" id="rent">
+                    <label class="form-check-label font-2 color-grey" for="rent">Rent</label>
+                    <input class="form-check-input ms-5" type="checkbox" name="Rent" id="ownership">
+                    <label class="form-check-label font-2 color-grey" for="ownership">Ownership</label>
+                </div>
+                <h2 class="font-1 color-black check-border">Type</h2>
+                <div class="d-flex flex-column ms-3">
+                    <div>
+                        <input class="form-check-input" type="checkbox" name="entire" id="entire">
+                        <label class="form-check-label font-2 color-grey" for="rent">Entire Place</label>
+                    </div>
+                    <div>
+                        <input class="form-check-input" type="checkbox" name="private" id="private">
+                        <label class="form-check-label font-2 color-grey" for="private">Private Room</label>
+                    </div>
+                    <div>
+                        <input class="form-check-input" type="checkbox" name="shared" id="shared">
+                        <label class="form-check-label font-2 color-grey" for="shared">Shared Room</label>
+                    </div>
+                </div>
+                <h2 class="font-1 color-black check-border">Size</h2>
+                <div class="d-flex flex-column ms-3">
+                    <div>
+                        <input class="form-check-input" type="checkbox" name="small" id="small">
+                        <label class="form-check-label font-2 color-grey" for="small">2-4 Rooms</label>
+                    </div>
+                    <div>
+                        <input class="form-check-input" type="checkbox" name="large" id="large">
+                        <label class="form-check-label font-2 color-grey" for="large">5+ Rooms</label>
+                    </div>
+                    <div>
+                        <input class="form-check-input" type="checkbox" name="custom" id="custom">
+                        <label class="form-check-label font-2 color-grey" for="custom">Custom <input type="text" size="1"></label>
+                    </div>
+                </div>
+                <h2 class="font-1 color-black check-border">Price Range</h2>
+                <div class="d-flex flex-column ms-3">
+                    <div>
+                        <input class="form-check-input" type="checkbox" name="cheap" id="cheap">
+                        <label class="form-check-label font-2 color-grey" for="cheap">10$ - 100$</label>
+                    </div>
+                    <div>
+                        <input class="form-check-input" type="checkbox" name="medium" id="medium">
+                        <label class="form-check-label font-2 color-grey" for="medium">100$ - 500$</label>
+                    </div>
+                    <div>
+                        <input class="form-check-input" type="checkbox" name="expensive" id="expensive">
+                        <label class="form-check-label font-2 color-grey" for="expensive">500$ - 100$</label>
+                    </div>
+                    <div>
+                        <input class="form-check-input" type="checkbox" name="larger" id="larger">
+                        <label class="form-check-label font-2 color-grey" for="larger">+1000$</label>
+                    </div>
+                </div>
+            </div>
         </div>
     </main>
     <!-- Footer -->
