Finish search item model

--- a/search.html
+++ b/search.html
@@ -58,8 +58,8 @@
         </div>
     </header>
     <main class="bg-light-grey">
-        <div class="row">
-            <div class="col-12 ">
+        <div class="row bg-light">
+            <div class="col-12 col-md-4 mb-5">
                 <div class="d-flex justify-content-center mt-2">
                     <input class="form-check-input" type="checkbox" name="Rent" id="rent">
                     <label class="form-check-label font-2 color-grey" for="rent">Rent</label>
@@ -113,6 +113,24 @@
                     <div>
                         <input class="form-check-input" type="checkbox" name="larger" id="larger">
                         <label class="form-check-label font-2 color-grey" for="larger">+1000$</label>
+                    </div>
+                </div>
+            </div>
+            <div class="col-12 col-md">
+                <div class="bg-light d-flex justify-content-center align-items-center border-bottom border-2 mb-3">
+                    <i class="bi bi-search color-black fs-2 ms-3"></i>
+                    <h3 class="fs-4 m-0 mx-2">Results</h3>
+                </div>
+                <div class="bg-light col-12 flex">
+                    <img class="img-fluid mt-3 ms-1 search-img" src="Assets/imgs/amongus.jpg" alt="">
+                    <div class="m-3 search-txt-div">
+                        <p class="fs-1 lh-1 color-black font-2 my-1">Among Us</p>
+                        <p class="color-grey fs-6 lh-1 font-2">From: <span class="color-black">Steam</span></p>
+                        <p class="font-1">An online and local party game of teamwork and betrayal for 4-10 players...in space!</p>
+                        <div class="d-flex justify-content-between align-items-end">
+                        <i class="bi bi-plus-square color-grey fs-4 plus-hover"></i>
+                        <p class="fs-4 m-0 color-red">20$</p>
+                    </div>
                     </div>
                 </div>
             </div>
