Fix some mistakes on search

--- a/search.html
+++ b/search.html
@@ -60,40 +60,27 @@
     <main class="bg-light-grey">
         <div class="row bg-light">
             <div class="col-12 col-md-4 mb-5">
-                <div class="d-flex justify-content-center mt-2">
-                    <input class="form-check-input" type="checkbox" name="Rent" id="rent">
-                    <label class="form-check-label font-2 color-grey" for="rent">Rent</label>
-                    <input class="form-check-input ms-5" type="checkbox" name="Rent" id="ownership">
-                    <label class="form-check-label font-2 color-grey" for="ownership">Ownership</label>
-                </div>
-                <h2 class="font-1 color-black check-border">Type</h2>
+                <h2 class="font-1 color-black check-border">Platform</h2>
                 <div class="d-flex flex-column ms-3">
                     <div>
-                        <input class="form-check-input" type="checkbox" name="entire" id="entire">
-                        <label class="form-check-label font-2 color-grey" for="rent">Entire Place</label>
+                        <input class="form-check-input" type="checkbox" name="ps3" id="ps3">
+                        <label class="form-check-label font-2 color-grey" for="small">PS3</label>
                     </div>
                     <div>
-                        <input class="form-check-input" type="checkbox" name="private" id="private">
-                        <label class="form-check-label font-2 color-grey" for="private">Private Room</label>
+                        <input class="form-check-input" type="checkbox" name="ps4" id="ps4">
+                        <label class="form-check-label font-2 color-grey" for="large">PS4</label>
                     </div>
                     <div>
-                        <input class="form-check-input" type="checkbox" name="shared" id="shared">
-                        <label class="form-check-label font-2 color-grey" for="shared">Shared Room</label>
-                    </div>
-                </div>
-                <h2 class="font-1 color-black check-border">Size</h2>
-                <div class="d-flex flex-column ms-3">
-                    <div>
-                        <input class="form-check-input" type="checkbox" name="small" id="small">
-                        <label class="form-check-label font-2 color-grey" for="small">2-4 Rooms</label>
+                        <input class="form-check-input" type="checkbox" name="xbox1" id="xbox1">
+                        <label class="form-check-label font-2 color-grey" for="xbox1">Xbox One</label>
                     </div>
                     <div>
-                        <input class="form-check-input" type="checkbox" name="large" id="large">
-                        <label class="form-check-label font-2 color-grey" for="large">5+ Rooms</label>
+                        <input class="form-check-input" type="checkbox" name="xbox2" id="xbox2">
+                        <label class="form-check-label font-2 color-grey" for="xbox2">Xbox Series S</label>
                     </div>
                     <div>
-                        <input class="form-check-input" type="checkbox" name="custom" id="custom">
-                        <label class="form-check-label font-2 color-grey" for="custom">Custom <input type="text" size="1"></label>
+                        <input class="form-check-input" type="checkbox" name="pc" id="pc">
+                        <label class="form-check-label font-2 color-grey" for="pc">PC</label>
                     </div>
                 </div>
                 <h2 class="font-1 color-black check-border">Price Range</h2>
@@ -121,7 +108,7 @@
                     <i class="bi bi-search color-black fs-2 ms-3"></i>
                     <h3 class="fs-4 m-0 mx-2">Results</h3>
                 </div>
-                <div class="bg-light col-12 flex">
+                <div class="bg-light col-12 flex border-bottom border-2">
                     <img class="img-fluid mt-3 ms-1 search-img" src="Assets/imgs/amongus.jpg" alt="">
                     <div class="m-3 search-txt-div">
                         <p class="fs-1 lh-1 color-black font-2 my-1">Among Us</p>
