Finish all linters errors

--- a/search.html
+++ b/search.html
@@ -1,7 +1,6 @@
 <!doctype html>
 <html lang="en">
   <head>
-    <!-- Required meta tags -->
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     
@@ -21,7 +20,7 @@
         <nav class="nav">
             <div class="nav-1">
                 <i class="bi bi-box-seam color-red me-1"></i>
-                <h1 class="text-light font-1 mt-2">FICTIONAL</h1>
+                <h2 class="text-light font-1 mt-2">FICTIONAL</h2>
             </div>
             <div class="nav-2">
                 <div>
@@ -64,11 +63,11 @@
                 <div class="d-flex flex-column ms-3">
                     <div>
                         <input class="form-check-input" type="checkbox" name="ps3" id="ps3">
-                        <label class="form-check-label font-2 color-grey" for="small">PS3</label>
+                        <label class="form-check-label font-2 color-grey" for="ps3">PS3</label>
                     </div>
                     <div>
                         <input class="form-check-input" type="checkbox" name="ps4" id="ps4">
-                        <label class="form-check-label font-2 color-grey" for="large">PS4</label>
+                        <label class="form-check-label font-2 color-grey" for="ps4">PS4</label>
                     </div>
                     <div>
                         <input class="form-check-input" type="checkbox" name="xbox1" id="xbox1">
