Fix background img url

--- a/search.html
+++ b/search.html
@@ -108,7 +108,8 @@
                     <h3 class="fs-4 m-0 mx-2">Results</h3>
                 </div>
                 <div class="bg-light col-12 flex border-bottom border-2">
-                    <img class="img-fluid mt-3 ms-1 search-img" src="Assets/imgs/amongus.jpg" alt="">
+                    <div class="results-img ms-2">
+                    </div>
                     <div class="m-3 search-txt-div">
                         <p class="fs-1 lh-1 color-black font-2 my-1">Among Us</p>
                         <p class="color-grey fs-6 lh-1 font-2">From: <span class="color-black">Steam</span></p>
