--- a/index.html
+++ b/index.html
@@ -58,6 +58,23 @@
     </header>
     <main class="bg-light-grey">
         <!-- Ipad/Desktop HOT ADS -->
+        <div class="d-none d-md-flex mx-3">
+            <a href="#" class="text-decoration-none align-self-center me-5 hot-ads-hover"><i class="bi bi-caret-left d-none d-md-grid fs-1 color-red"></i></a>
+            <div class="bg-light  border border-1 row">
+                <div class="col-md-6 hot-ads-img">
+                </div>
+                <div class="col-6 d-flex flex-column justify-content-between">
+                    <h2 class="h1 lh-1 color-black font-1 my-4">Sekiro - Shadows Die Twice</h2>
+                    <p class="hot-ads-text font-2">Game of the Year - The Game Awards 2019 Best Action Game of 2019 - IGN Carve your own clever path to vengeance in the award winning adventure from developer FromSoftware, creators of Bloodborne and the Dark Souls series. Take Revenge. Restore Your Honor. Kill Ingeniously.</p>
+                    <p class="color-grey lh-1 fs-5 font-2">From: <span class="color-black">Steam</span></p>
+                    <div class="d-flex justify-content-between align-items-end">
+                        <i class="bi bi-plus-square color-grey fs-1 plus-hover"></i>
+                        <p class="fs-1 m-0 color-red"> <span class="text-decoration-line-through color-black fs-3">59$</span> 29$</p>
+                    </div>
+                </div>
+            </div> 
+            <a href="#" class="text-decoration-none align-self-center ms-5 hot-ads-hover"><i class="bi bi-caret-right d-none d-md-grid fs-1 color-red"></i></a>
+        </div>
         <!-- Normal Ads (mobile and dekstop) -->
         <div>
             <div class="bg-light d-flex justify-content-start align-items-center border-bottom border-2 mb-3">
