--- a/search.html
+++ b/search.html
@@ -110,13 +110,13 @@
                 <div class="bg-light col-12 flex border-bottom border-2">
                     <div class="results-img ms-2">
                     </div>
-                    <div class="m-3 search-txt-div">
+                    <div class="m-3 search-txt-div d-flex flex-column justify-content-between">
                         <p class="fs-1 lh-1 color-black font-2 my-1">Among Us</p>
                         <p class="color-grey fs-6 lh-1 font-2">From: <span class="color-black">Steam</span></p>
-                        <p class="font-1">An online and local party game of teamwork and betrayal for 4-10 players...in space!</p>
+                        <p class="font-1 result-txt">An online and local party game of teamwork and betrayal for 4-10 players...in space!</p>
                         <div class="d-flex justify-content-between align-items-end">
                         <i class="bi bi-plus-square color-grey fs-4 plus-hover"></i>
-                        <p class="fs-4 m-0 color-red">20$</p>
+                        <p class="fs-4 m-0 color-white badge bg-red">20$</p>
                     </div>
                     </div>
                 </div>
@@ -154,11 +154,9 @@
                 <h3 class="color-red footer-title">Categories</h3>
                 <div class="row">
                     <div class="d-flex flex-column col">
-                        <a class="color-grey text-decoration-none link-hover" href="#">Games</a>
-                        <a class="color-grey text-decoration-none link-hover" href="#">Consoles</a>
-                        <a class="color-grey text-decoration-none link-hover" href="#">Acessories</a>
-                        <a class="color-grey text-decoration-none link-hover" href="#">Games</a>
-                        <a class="color-grey text-decoration-none link-hover" href="#">Consoles</a>
+                        <div>
+
+                        </div>
                     </div>
                 </div>
             </div>
