Finish search.html footer

--- a/search.html
+++ b/search.html
@@ -139,23 +139,40 @@
                 </div>
             </div>
             <div class="d-none d-md-grid col-md ms-2">
-                <h3 class="color-red footer-title">Categories</h3>
+                <h3 class="color-red footer-title">Navigation</h3>
                 <div class="row">
                     <div class="d-flex flex-column col">
-                        <a class="color-grey text-decoration-none link-hover" href="#">Games</a>
-                        <a class="color-grey text-decoration-none link-hover" href="#">Consoles</a>
-                        <a class="color-grey text-decoration-none link-hover" href="#">Acessories</a>
-                        <a class="color-grey text-decoration-none link-hover" href="#">Games</a>
-                        <a class="color-grey text-decoration-none link-hover" href="#">Consoles</a>
+                        <a class="color-grey text-decoration-none link-hover" href="#">Home</a>
+                        <a class="color-grey text-decoration-none link-hover" href="#">Sign in</a>
+                        <a class="color-grey text-decoration-none link-hover" href="#">Sign Up</a>
+                        <a class="color-grey text-decoration-none link-hover" href="#">Terms & Conditions</a>
+                        <a class="color-grey text-decoration-none link-hover" href="#">FAQ</a>
                     </div>
                 </div>
             </div>
-            <div class="d-none d-md-grid col-md ms-2">
-                <h3 class="color-red footer-title">Categories</h3>
+            <div class="d-none d-md-grid col-md-3 ms-2">
                 <div class="row">
-                    <div class="d-flex flex-column col">
-                        <div>
-
+                    <div class="d-flex flex-column col align-items-center ">
+                        <div class="row col-4">
+                            <label class="color-red fw-bold" for="country">COUNTRY</label>
+                            <select class="form-select" name="country" id="country" size="1">
+                                <option value="canada">Canada</option>
+                                <option value="eua">United States</option>
+                            </select>
+                        </div>
+                        <div class="row col-4">
+                            <label class="color-red fw-bold" for="language">LANGUAGE</label>
+                            <select class="form-select" name="language" id="language" size="1">
+                                <option value="english">English</option>
+                                <option value="french">French</option>
+                            </select>
+                        </div>
+                        <div class="row col-4">
+                            <label class="color-red fw-bold" for="currency">CURRENCY</label>
+                            <select class="form-select" name="currency" id="currency" size="1">
+                                <option value="dolar">Dolar</option>
+                                <option value="euro">Euro</option>
+                            </select>
                         </div>
                     </div>
                 </div>
