--- a/search.html
+++ b/search.html
@@ -63,42 +63,42 @@
                 <div class="d-flex flex-column ms-3">
                     <div>
                         <input class="form-check-input" type="checkbox" name="ps3" id="ps3">
-                        <label class="form-check-label font-2 color-grey" for="ps3">PS3</label>
+                        <label class="form-check-label font-2 color-grey form-txt" for="ps3">PS3</label>
                     </div>
                     <div>
                         <input class="form-check-input" type="checkbox" name="ps4" id="ps4">
-                        <label class="form-check-label font-2 color-grey" for="ps4">PS4</label>
+                        <label class="form-check-label font-2 color-grey form-txt" for="ps4">PS4</label>
                     </div>
                     <div>
                         <input class="form-check-input" type="checkbox" name="xbox1" id="xbox1">
-                        <label class="form-check-label font-2 color-grey" for="xbox1">Xbox One</label>
+                        <label class="form-check-label font-2 color-grey form-txt" for="xbox1">Xbox One</label>
                     </div>
                     <div>
                         <input class="form-check-input" type="checkbox" name="xbox2" id="xbox2">
-                        <label class="form-check-label font-2 color-grey" for="xbox2">Xbox Series S</label>
+                        <label class="form-check-label font-2 color-grey form-txt" for="xbox2">Xbox Series S</label>
                     </div>
                     <div>
                         <input class="form-check-input" type="checkbox" name="pc" id="pc">
-                        <label class="form-check-label font-2 color-grey" for="pc">PC</label>
+                        <label class="form-check-label font-2 color-grey form-txt" for="pc">PC</label>
                     </div>
                 </div>
                 <h2 class="font-1 color-black check-border">Price Range</h2>
                 <div class="d-flex flex-column ms-3">
                     <div>
                         <input class="form-check-input" type="checkbox" name="cheap" id="cheap">
-                        <label class="form-check-label font-2 color-grey" for="cheap">10$ - 100$</label>
+                        <label class="form-check-label font-2 color-grey form-txt" for="cheap">10$ - 100$</label>
                     </div>
                     <div>
                         <input class="form-check-input" type="checkbox" name="medium" id="medium">
-                        <label class="form-check-label font-2 color-grey" for="medium">100$ - 500$</label>
+                        <label class="form-check-label font-2 color-grey form-txt" for="medium">100$ - 500$</label>
                     </div>
                     <div>
                         <input class="form-check-input" type="checkbox" name="expensive" id="expensive">
-                        <label class="form-check-label font-2 color-grey" for="expensive">500$ - 100$</label>
+                        <label class="form-check-label font-2 color-grey form-txt" for="expensive">500$ - 100$</label>
                     </div>
                     <div>
                         <input class="form-check-input" type="checkbox" name="larger" id="larger">
-                        <label class="form-check-label font-2 color-grey" for="larger">+1000$</label>
+                        <label class="form-check-label font-2 color-grey form-txt" for="larger">+1000$</label>
                     </div>
                 </div>
             </div>
@@ -107,13 +107,130 @@
                     <i class="bi bi-search color-black fs-2 ms-3"></i>
                     <h3 class="fs-4 m-0 mx-2">Results</h3>
                 </div>
-                <div class="bg-light col-12 flex border-bottom border-2">
-                    <div class="results-img ms-2">
+                <div class="bg-light col-12 flex border-bottom border-2 py-1 my-1">
+                    <div class="results-img results-img-1 ms-2">
                     </div>
                     <div class="m-3 search-txt-div d-flex flex-column justify-content-between">
                         <p class="fs-1 lh-1 color-black font-2 my-1">Among Us</p>
                         <p class="color-grey fs-6 lh-1 font-2">From: <span class="color-black">Steam</span></p>
                         <p class="font-1 result-txt">An online and local party game of teamwork and betrayal for 4-10 players...in space!</p>
+                        <div class="d-flex justify-content-between align-items-end">
+                        <i class="bi bi-plus-square color-grey fs-4 plus-hover"></i>
+                        <p class="fs-4 m-0 color-white badge bg-red">20$</p>
+                    </div>
+                    </div>
+                </div>
+                <div class="bg-light col-12 flex border-bottom border-2 py-1 my-1">
+                    <div class="results-img results-img-2 ms-2">
+                    </div>
+                    <div class="m-3 search-txt-div d-flex flex-column justify-content-between">
+                        <p class="fs-1 lh-1 color-black font-2 my-1">Bloons TD 6</p>
+                        <p class="color-grey fs-6 lh-1 font-2">From: <span class="color-black">Steam</span></p>
+                        <p class="font-1 result-txt">The Bloons are back and better than ever! Get ready for a massive 3D tower defense game designed to give you hours and hours of the best strategy gaming available.</p>
+                        <div class="d-flex justify-content-between align-items-end">
+                        <i class="bi bi-plus-square color-grey fs-4 plus-hover"></i>
+                        <p class="fs-4 m-0 color-white badge bg-red">20$</p>
+                    </div>
+                    </div>
+                </div>
+                <div class="bg-light col-12 flex border-bottom border-2 py-1 my-1">
+                    <div class="results-img results-img-2 ms-2">
+                    </div>
+                    <div class="m-3 search-txt-div d-flex flex-column justify-content-between">
+                        <p class="fs-1 lh-1 color-black font-2 my-1">Bloons TD 6</p>
+                        <p class="color-grey fs-6 lh-1 font-2">From: <span class="color-black">Steam</span></p>
+                        <p class="font-1 result-txt">The Bloons are back and better than ever! Get ready for a massive 3D tower defense game designed to give you hours and hours of the best strategy gaming available.</p>
+                        <div class="d-flex justify-content-between align-items-end">
+                        <i class="bi bi-plus-square color-grey fs-4 plus-hover"></i>
+                        <p class="fs-4 m-0 color-white badge bg-red">20$</p>
+                    </div>
+                    </div>
+                </div>
+                <div class="bg-light col-12 flex border-bottom border-2 py-1 my-1">
+                    <div class="results-img results-img-2 ms-2">
+                    </div>
+                    <div class="m-3 search-txt-div d-flex flex-column justify-content-between">
+                        <p class="fs-1 lh-1 color-black font-2 my-1">Bloons TD 6</p>
+                        <p class="color-grey fs-6 lh-1 font-2">From: <span class="color-black">Steam</span></p>
+                        <p class="font-1 result-txt">The Bloons are back and better than ever! Get ready for a massive 3D tower defense game designed to give you hours and hours of the best strategy gaming available.</p>
+                        <div class="d-flex justify-content-between align-items-end">
+                        <i class="bi bi-plus-square color-grey fs-4 plus-hover"></i>
+                        <p class="fs-4 m-0 color-white badge bg-red">20$</p>
+                    </div>
+                    </div>
+                </div>
+                <div class="bg-light col-12 flex border-bottom border-2 py-1 my-1">
+                    <div class="results-img results-img-2 ms-2">
+                    </div>
+                    <div class="m-3 search-txt-div d-flex flex-column justify-content-between">
+                        <p class="fs-1 lh-1 color-black font-2 my-1">Bloons TD 6</p>
+                        <p class="color-grey fs-6 lh-1 font-2">From: <span class="color-black">Steam</span></p>
+                        <p class="font-1 result-txt">The Bloons are back and better than ever! Get ready for a massive 3D tower defense game designed to give you hours and hours of the best strategy gaming available.</p>
+                        <div class="d-flex justify-content-between align-items-end">
+                        <i class="bi bi-plus-square color-grey fs-4 plus-hover"></i>
+                        <p class="fs-4 m-0 color-white badge bg-red">20$</p>
+                    </div>
+                    </div>
+                </div>
+                <div class="bg-light col-12 flex border-bottom border-2 py-1 my-1">
+                    <div class="results-img results-img-2 ms-2">
+                    </div>
+                    <div class="m-3 search-txt-div d-flex flex-column justify-content-between">
+                        <p class="fs-1 lh-1 color-black font-2 my-1">Bloons TD 6</p>
+                        <p class="color-grey fs-6 lh-1 font-2">From: <span class="color-black">Steam</span></p>
+                        <p class="font-1 result-txt">The Bloons are back and better than ever! Get ready for a massive 3D tower defense game designed to give you hours and hours of the best strategy gaming available.</p>
+                        <div class="d-flex justify-content-between align-items-end">
+                        <i class="bi bi-plus-square color-grey fs-4 plus-hover"></i>
+                        <p class="fs-4 m-0 color-white badge bg-red">20$</p>
+                    </div>
+                    </div>
+                </div>
+                <div class="bg-light col-12 flex border-bottom border-2 py-1 my-1">
+                    <div class="results-img results-img-2 ms-2">
+                    </div>
+                    <div class="m-3 search-txt-div d-flex flex-column justify-content-between">
+                        <p class="fs-1 lh-1 color-black font-2 my-1">Bloons TD 6</p>
+                        <p class="color-grey fs-6 lh-1 font-2">From: <span class="color-black">Steam</span></p>
+                        <p class="font-1 result-txt">The Bloons are back and better than ever! Get ready for a massive 3D tower defense game designed to give you hours and hours of the best strategy gaming available.</p>
+                        <div class="d-flex justify-content-between align-items-end">
+                        <i class="bi bi-plus-square color-grey fs-4 plus-hover"></i>
+                        <p class="fs-4 m-0 color-white badge bg-red">20$</p>
+                    </div>
+                    </div>
+                </div>
+                <div class="bg-light col-12 flex border-bottom border-2 py-1 my-1">
+                    <div class="results-img results-img-2 ms-2">
+                    </div>
+                    <div class="m-3 search-txt-div d-flex flex-column justify-content-between">
+                        <p class="fs-1 lh-1 color-black font-2 my-1">Bloons TD 6</p>
+                        <p class="color-grey fs-6 lh-1 font-2">From: <span class="color-black">Steam</span></p>
+                        <p class="font-1 result-txt">The Bloons are back and better than ever! Get ready for a massive 3D tower defense game designed to give you hours and hours of the best strategy gaming available.</p>
+                        <div class="d-flex justify-content-between align-items-end">
+                        <i class="bi bi-plus-square color-grey fs-4 plus-hover"></i>
+                        <p class="fs-4 m-0 color-white badge bg-red">20$</p>
+                    </div>
+                    </div>
+                </div>
+                <div class="bg-light col-12 flex border-bottom border-2 py-1 my-1">
+                    <div class="results-img results-img-2 ms-2">
+                    </div>
+                    <div class="m-3 search-txt-div d-flex flex-column justify-content-between">
+                        <p class="fs-1 lh-1 color-black font-2 my-1">Bloons TD 6</p>
+                        <p class="color-grey fs-6 lh-1 font-2">From: <span class="color-black">Steam</span></p>
+                        <p class="font-1 result-txt">The Bloons are back and better than ever! Get ready for a massive 3D tower defense game designed to give you hours and hours of the best strategy gaming available.</p>
+                        <div class="d-flex justify-content-between align-items-end">
+                        <i class="bi bi-plus-square color-grey fs-4 plus-hover"></i>
+                        <p class="fs-4 m-0 color-white badge bg-red">20$</p>
+                    </div>
+                    </div>
+                </div>
+                <div class="bg-light col-12 flex border-bottom border-2 py-1 my-1">
+                    <div class="results-img results-img-2 ms-2">
+                    </div>
+                    <div class="m-3 search-txt-div d-flex flex-column justify-content-between">
+                        <p class="fs-1 lh-1 color-black font-2 my-1">Bloons TD 6</p>
+                        <p class="color-grey fs-6 lh-1 font-2">From: <span class="color-black">Steam</span></p>
+                        <p class="font-1 result-txt">The Bloons are back and better than ever! Get ready for a massive 3D tower defense game designed to give you hours and hours of the best strategy gaming available.</p>
                         <div class="d-flex justify-content-between align-items-end">
                         <i class="bi bi-plus-square color-grey fs-4 plus-hover"></i>
                         <p class="fs-4 m-0 color-white badge bg-red">20$</p>
